Fix datepicker alignment in case main view

--- a/projects/campus-cloud/src/app/containers/controlpanel/contact-trace/cases/list/components/list-action-box/list-action-box.component.scss
+++ b/projects/campus-cloud/src/app/containers/controlpanel/contact-trace/cases/list/components/list-action-box/list-action-box.component.scss
@@ -10,6 +10,10 @@
   margin-top: 0;
 }
 
+.dateranges {
+  padding-left: 1.5em;
+}
+
 cp-dropdown {
   width: 11em;
 }
